--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,20 @@
-spring.application.name=springboot-ecommerce-course1-db
+spring:
+  application:
+    name: springboot-ecommerce-course1-db
+
+  # MySQL ??
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/onion-db
+    username: onion-user
+    password: onion1!
+  # JPA ??
+  jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
+    hibernate:
+      ddl-auto: update
+    # Hibernate ?? (?? ??)
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
