Part1 - Ch3.07 JWT 기반 로그인 기능 개발

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,3 +18,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+logging:
+  level:
+    root: info
+    org.springframework.web: INFO
+    com.onion: debug
