--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,10 @@
+
 spring:
   application:
     name: springboot-ecommerce-course1-db
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/onion-db
+    url: jdbc:mysql://localhost:3306/onion-db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC&characterEncoding=UTF-8
     username: onion-user
     password: onion1!
     # HikariCP 설정
@@ -14,12 +15,12 @@ spring:
       maximum-pool-size: 10
       # 최소 유휴 연결 수 지정
       minimum-idle: 5
-      # 유휴 연결이 닫히기 전까지의 시간(ms)
-      idle-timeout: 30000
+      # 유휴 연결이 닫히기 전까지의 시간(ms) (너무 짧으면 커넥션이 비정상 종료될 수 있음)
+      idle-timeout: 60000
       # 연결을 얻기 위해 기다리는 최대 시간(ms)
-      connection-timeout: 20000
+      connection-timeout: 30000 # 30초
       # 연결의 최대 수명(ms)
-      max-lifetime: 1800000
+      max-lifetime: 1800000 # 30분 (기본값 유지)
       # 연결 테스트에 사용할 쿼리
       connection-test-query: SELECT 1
   jpa:
@@ -31,6 +32,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  devtools:
+    restart:
+      enabled: false
 
 springdoc:
   open-api:
@@ -70,3 +74,4 @@ logging:
     org.springframework.web: INFO
     com.onion: debug
     org.springdoc: debug
+    # com.zaxxer.hikari: DEBUG
